# giant-file-exchange

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  build.rs
scripts/: build-release.ps1
src/: api.rs  app.rs  branding.rs  config.rs  lib.rs  logging.rs  main.rs  model.rs  queue.rs
src/windows/: clipboard.rs  dpapi.rs  ipc.rs  mod.rs  notification.rs  shell.rs
