[package]
name = "giant-file-exchange"
version = "0.1.0"
edition = "2024"
description = "Windows 文件交换助手"
license = "MIT"
build = "build.rs"

[[bin]]
name = "GiantFileExchange"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
eframe = { version = "0.35", default-features = false, features = ["accesskit", "default_fonts", "wgpu", "x11", "wayland"] }
futures-util = "0.3"
global-hotkey = "0.8"
reqwest = { version = "0.13", features = ["json", "multipart", "stream"] }
rfd = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
single-instance = "0.3"
tokio = { version = "1.0", features = ["fs", "io-util", "macros", "rt-multi-thread", "sync", "time"] }
tokio-util = { version = "0.7", features = ["io"] }
tray-icon = "0.24"
url = "2.5"

[target.'cfg(windows)'.dependencies]
clipboard-win = "5.4"
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Cryptography",
    "Win32_Storage_FileSystem",
    "Win32_System_DataExchange",
    "Win32_System_IO",
    "Win32_System_Memory",
    "Win32_System_Pipes",
    "Win32_System_Registry",
    "Win32_System_Threading",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }
winreg = "0.55"

[build-dependencies]
winresource = "0.1"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
